--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
     <div style="text-align: center;">
       <a target="_blank">
-        <img src="https://jdudhaya007.github.io/JDudhaya0/web_page-0001.jpg" alt="FUNDAMENTALS OF WEB Development" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <img src="https://ramya28ramya.github.io/Ramya2007/WhatsApp%20Image%202025-09-11%20at%202.25.16%20PM.jpeg" alt="FUNDAMENTALS OF WEB Development" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
       </a>
       <p></p>
     </div>
