--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:santhoshudhaya3@gmail.com">santhoshudhaya3@gmail.com</a></p>
+  <p>Email: <a href="mailto:ramyadr7395@gmail.com">ramyadr7395@gmail.com</a></p>
   <p>Phone: +91-7395952797</p>
   <p>Location:mosque street,thirkkazhukundram,Chengalpattu,Tamil Nadu, India-603108</p>
   <div style="margin-top: 1rem;">
