--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <body>
 <header style="display: flex; flex-direction: row; align-items: center; justify-content: space-between; padding: 2rem">
   <button class="dark-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  <img src="https://jdudhaya007.github.io/JDudhaya0/pic.png" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
+  <img src="" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
   <div style="text-align: left;">
     <h1>D.RAMYA BSC.CS(DS)</h1>
     <p>Student | Department Of Computer Science</p>
@@ -246,7 +246,7 @@
 
 <section id="resume">
   <h2>Resume</h2>
-  <a href="https://jdudhaya007.github.io/JDudhaya0/resume.png" target="_blank" class="download-button">Download CV</a>
+  <a href="" target="_blank" class="download-button">Download CV</a>
 </section>
 
 <section id="contact">
