--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
     <div style="text-align: center;">
      <a target="_blank">
-        <img src="https://jdudhaya007.github.io/JDudhaya0/cloud_page-0001.jpg" alt="FUNDAMENTALS OF CLOUD COMPUTING" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <img src="https://ramya28ramya.github.io/Ramya2007/WhatsApp%20Image%202025-09-18%20at%2011.12.32%20AM.jpeg" alt="FUNDAMENTALS OF CLOUD COMPUTING" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
       </a>
     </div>
   </div>
