--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <section id="projects">
   <h2>Projects</h2>
   <ul>
-    <li><a href="https://jdudhaya007.github.io/JDudhaya/" target="_blank">Projects</a></li>
+    <li><a href="https://ramya28ramya.github.io/Ramya2007/project.html" target="_blank">Projects</a></li>
   </ul>
 </section>
 
